[package]
name = "rusty_interaction"
version = "0.1.0"
authors = ["Hugo Woesthuis <hugow2011@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# For types
serde_repr = "0.1"
serde_json = "1"
chrono = "0.4"

# For security
ed25519-dalek = {version = "1", optional = true}
hex = {version = "0.4", optional = true}

# For handler
env_logger = {version = "0", optional = true}

rustls = {version = "0.18", optional = true} 
actix = {version = "0.10", optional = true}
actix-web = {version = "3", features=["rustls"], optional = true}
actix-files = {version = "0.3", optional = true}
actix-rt = {version = "2", optional = true}
reqwest = { version = "0.10.10", features = ["json"], optional = true }

async-trait = {version = "0.1", optional = true}

log = {version = "0", optional = true}

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_with]
version = "1.8.0"
features = [ "macros", "chrono", "json" ]

[dependencies.attributes]
path = "./attributes"
version = "0"
optional = true

[features]
default = ["types", "security"]
security = ["ed25519-dalek", "hex", "types"]
types = []
handler = ["types", "security", "actix", "actix-web", "actix-files", "actix-rt", "rustls", "async-trait", "attributes", "log", "reqwest"]


