[package]
name = "rusty_interaction"
version = "0.2.0"
authors = ["Hugo Woesthuis <hugo@woesthuis.eu>"]
license = "ISC"
description = "Handle Discord Interactions as outgoing webhook"
repository = "https://github.com/0x2b00b1e5/rusty-interaction"
readme = "README.md"
edition = "2018"
keywords = ["discord", "interactions", "discord-interactions", "slash-commands", "api"]
categories = ["api-bindings", "web-programming"]
include = ["src/**/*", "LICENSE.md", "README.md"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# For types
serde_repr = "0.1"
serde_json = "1"
chrono = "0.4"

# For security
ed25519-dalek = { version = "1", optional = true }
hex = { version = "0.4", optional = true }

# For handler

rustls = { version = "0.18", optional = true } 
actix = { version = "0.10", optional = true }
actix-web = { version = "3", features = ["rustls"], optional = true }
actix-rt = { version = "2", optional = true }
reqwest = { version = "0.10.10", features = ["json"], optional = true }

async-trait = { version = "0.1", optional = true }

log = { version = "0", optional = true }

anymap = {version = "0.12", optional = true}
[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_with]
version = "1.8.0"
features = [ "macros", "chrono", "json" ]

[dependencies.attributes]
path = "./attributes"
version = "0.0.7"
optional = true

[features]
default = ["types", "security"]
security = ["ed25519-dalek", "hex", "types"]
builder = ["log"]
types = []
handler = ["types", "builder", "security", "actix", "actix-web", "actix-rt", "rustls", "async-trait", "attributes", "reqwest", "anymap"]
extended-handler = ["handler"]

[package.metadata.docs.rs]
all-features = true
