[package]
name = "attributes"
version = "0.0.4"
authors = ["Hugo Woesthuis <hugow2011@outlook.com>"]
edition = "2018"
description = "Procedural macros for command creation with rusty-interaction"
license = "ISC"
[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.70", features=["full"]}
quote = {version = "1.0.9"}