[package]
name = "attributes"
version = "0.0.6"
authors = ["Hugo Woesthuis <hugow2011@outlook.com>"]
edition = "2018"
description = "Procedural macros for command creation with rusty-interaction"
license = "ISC"
readme = "README.md"
[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.70", features=["full"]}
quote = {version = "1.0.9"}