[package]
name = "attributes"
version = "0.0.8"
authors = ["Hugo Woesthuis <hugow2011@outlook.com>"]
edition = "2018"
description = "Procedural macros for command creation with rusty-interaction"
license = "ISC"
readme = "README.md"
homepage = "https://github.com/0x2b00b1e5/rusty-interaction"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.70", features=["full"]}
quote = {version = "1.0.9"}
